# wyze-plugs

./: pyproject.toml
wyze_plugs/: __init__.py
